Sliders [ADD] Adds new sliders icon

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -135,4 +135,6 @@
 	"analytical allocation" "\e061",
 	"tree list" "\e061",
 	"jumping cc" "\e063",
-	"drag2" "\e062";
+	"drag2" "\e062",
+
+	"sliders" "\e067";
