--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -127,5 +127,7 @@ $luccaIcons_icons: (
 	"analytical allocation": "\e061",
 	"tree list": "\e061",
 	"jumping cc": "\e063",
-	"drag2": "\e062"
+	"drag2": "\e062",
+
+	"sliders": "\e067"
 );
