--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -129,5 +129,7 @@ $luccaIcons_icons: (
 	"jumping cc": "\e063",
 	"drag2": "\e062",
 
-	"sliders": "\e067"
+	"sliders": "\e067",
+
+	"roles": "\e068"
 );
