lucca.icons [ADD] several icons (imported item + headphones + help outline + image + import cb + pristine imported item + rejected + mosaic + customize) [MOD] list icon (no more radius borders)

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -142,6 +142,19 @@
 	"roles" "\e068",
 
 	"radio" "\e069",
-	"radio checked" "\e06a";
+	"radio checked" "\e06a"
+
+	"imported item" "\e06b",
+	"headphones" "\e06c",
+	"help outline" "\e06d",
+	"image" "\e06e",
+	"import cb" "\e06f",
+	"list" "\e070",
+	"pristine imported item" "\e071",
+	"rejected" "\e072",
+	"mosaic" "\e073",
+	"customize" "\e01c"
+
+	;
 
 
