--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -22,20 +22,28 @@ $luccaIcons_circular-padding: 0.5em;
 $luccaIcons_icons: (
 	"breakfast": "\e000",
 	"gallery": "\e001",
+
+	"lock": "\e01d",
 	"unlock": "\e003",
+
 	"north chevron": "\e004",
 	"south chevron": "\e005",
 	"west chevron": "\e006",
+	"east chevron": "\e059",
+
+	"west arrow": "\e053",
+	"east arrow": "\e054",
+	"north arrow": "\e055",
+	"south arrow": "\e056",
+
 	"attachment": "\e007",
 	"blocks": "\e008",
 	"branch": "\e009",
 	"coffee": "\e00a",
 	"check": "\e00b",
-
 	"checkbox": "\e00c",
 	"checkbox checked": "\e00d",
 	"checkbox partial": "\e064",
-
 	"clock": "\e00e",
 	"cross": "\e00f",
 	"calendar": "\e010",
@@ -48,32 +56,35 @@ $luccaIcons_icons: (
 	"files": "\e017",
 	"filter": "\e018",
 	"email": "\e019",
+
+	"user": "\e033",
 	"add user": "\e01a",
+	"remove user": "\e028",
+	"to user": "\e02c",
+
 	"help": "\e01b",
 	"list": "\e01c",
-	"lock": "\e01d",
 	"forbidden": "\e01e",
 	"minus": "\e01f",
+
 	"move": "\e020",
 	"move horizontally": "\e021",
 	"move vertically": "\e022",
+
 	"notification": "\e023",
 	"outside": "\e024",
 	"camera": "\e025",
 	"printer": "\e026",
 	"refresh": "\e027",
-	"remove user": "\e028",
 	"drag": "\e029",
 	"search": "\e02a",
 	"send": "\e02b",
-	"to user": "\e02c",
 	"settings": "\e02d",
 	"comment": "\e02e",
 	"timer": "\e02f",
 	"trash": "\e030",
 	"plus": "\e031",
 	"upload": "\e032",
-	"user": "\e033",
 	"warning": "\e034",
 
 	"bookmark": "\e035",
@@ -109,13 +120,9 @@ $luccaIcons_icons: (
 	"dollar": "\e050",
 	"computer": "\e051",
 	"bus": "\e052",
-	"west arrow": "\e053",
-	"east arrow": "\e054",
-	"north arrow": "\e055",
-	"south arrow": "\e056",
+
 	"pin": "\e057",
 	"analytics": "\e058",
-	"east chevron": "\e059",
 	"location": "\e05a",
 	"tiles": "\e05d",
 	"truck": "\e05e",
@@ -135,4 +142,15 @@ $luccaIcons_icons: (
 
 	"radio": "\e069",
 	"radio checked": "\e06a"
+
+	"imported item": "\e06b",
+	"headphones": "\e06c",
+	"help outline": "\e06d",
+	"image": "\e06e",
+	"import cb": "\e06f",
+	"list": "\e070",
+	"pristine imported item": "\e071",
+	"rejected": "\e072",
+	"mosaic": "\e073",
+	"customize": "\e01c"
 );
