lucca-icons [MOD] Back to previous font mapping for list icon

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -148,9 +148,9 @@ $luccaIcons_icons: (
 	"help outline": "\e06d",
 	"image": "\e06e",
 	"import cb": "\e06f",
-	"list": "\e070",
+	"list": "\e01c",
 	"pristine imported item": "\e071",
 	"rejected": "\e072",
 	"mosaic": "\e073",
-	"customize": "\e01c"
+	"customize": "\e074"
 );
