--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -149,11 +149,11 @@
 	"help outline" "\e06d",
 	"image" "\e06e",
 	"import cb" "\e06f",
-	"list" "\e070",
+	"list" "\e01c",
 	"pristine imported item" "\e071",
 	"rejected" "\e072",
 	"mosaic" "\e073",
-	"customize" "\e01c"
+	"customize" "\e074"
 
 	;
 
