lucca-icons [MOD] new list icon (without deleting the previous one)

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -149,7 +149,7 @@
 	"help outline" "\e06d",
 	"image" "\e06e",
 	"import cb" "\e06f",
-	"list" "\e01c",
+	"list" "\e070",
 	"pristine imported item" "\e071",
 	"rejected" "\e072",
 	"mosaic" "\e073",
