--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -148,7 +148,7 @@ $luccaIcons_icons: (
 	"help outline": "\e06d",
 	"image": "\e06e",
 	"import cb": "\e06f",
-	"list": "\e01c",
+	"list": "\e070",
 	"pristine imported item": "\e071",
 	"rejected": "\e072",
 	"mosaic": "\e073",
