--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -141,7 +141,7 @@ $luccaIcons_icons: (
 	"roles": "\e068",
 
 	"radio": "\e069",
-	"radio checked": "\e06a"
+	"radio checked": "\e06a",
 
 	"imported item": "\e06b",
 	"headphones": "\e06c",
