lucca-icons [ADD] watch + unwatch

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -151,5 +151,8 @@ $luccaIcons_icons: (
 	"pristine imported item": "\e071",
 	"rejected": "\e072",
 	"mosaic": "\e073",
-	"customize": "\e074"
+	"customize": "\e074",
+
+	"watch": "\e076",
+	"unwatch": "\e075"
 );
