--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -153,7 +153,10 @@
 	"pristine imported item" "\e071",
 	"rejected" "\e072",
 	"mosaic" "\e073",
-	"customize" "\e074"
+	"customize" "\e074",
+
+	"watch" "\e076",
+	"unwatch" "\e075"
 
 	;
 
