lucca-icons [ADD] nine tiles

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -154,5 +154,6 @@ $luccaIcons_icons: (
 	"customize": "\e074",
 
 	"watch": "\e076",
-	"unwatch": "\e075"
+	"unwatch": "\e075",
+	"nine tiles": "\e079"
 );
