--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -155,5 +155,7 @@ $luccaIcons_icons: (
 
 	"watch": "\e076",
 	"unwatch": "\e075",
-	"nine tiles": "\e079"
+	"nine tiles": "\e079",
+
+	"birthday" : "\e07A"
 );
