lucca-icons [ADD] group

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -157,5 +157,6 @@ $luccaIcons_icons: (
 	"unwatch": "\e075",
 	"nine tiles": "\e079",
 
-	"birthday" : "\e07A"
+	"birthday" : "\e07A",
+	"group": "\e05d"
 );
