--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -123,7 +123,7 @@ $luccaIcons_icons: (
 	"pin": "\e057",
 	"analytics": "\e058",
 	"location": "\e05a",
-	"tiles": "\e05d",
+	"tiles": "\e07b",
 	"truck": "\e05e",
 	"bank card": "\e05f",
 	"database": "\e060",
@@ -158,5 +158,5 @@ $luccaIcons_icons: (
 	"nine tiles": "\e079",
 
 	"birthday" : "\e07A",
-	"group": "\e07b"
+	"group": "\e07c"
 );
