lucca-icons [ADD] thin cross + synchronization

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -158,5 +158,7 @@ $luccaIcons_icons: (
 	"nine tiles": "\e079",
 
 	"birthday" : "\e07A",
-	"group": "\e07c"
+	"group": "\e07c",
+	"thin cross": "\e05d",
+	"synchronization": "\e07d"
 );
