--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -160,8 +160,9 @@
 
 	"nine tiles" "\e079",
 	"birthday" "\e07A",
-	"group" "\e07c"
-
+	"group" "\e07c",
+	"thin cross" "\e05d",
+	"synchronization" "\e07d"
 	;
 
 
