lucca-icons [ADD] thin plus • heart • broken heart • star

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -162,7 +162,11 @@
 	"birthday" "\e07A",
 	"group" "\e07c",
 	"thin cross" "\e05d",
-	"synchronization" "\e07d"
+	"synchronization" "\e07d",
+	"thin plus" "\e080",
+	"heart" "\e07f",
+	"broken heart" "\e07e",
+	"star" "\e081"
 	;
 
 
