--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -160,5 +160,9 @@ $luccaIcons_icons: (
 	"birthday" : "\e07A",
 	"group": "\e07c",
 	"thin cross": "\e05d",
-	"synchronization": "\e07d"
+	"synchronization": "\e07d",
+	"thin plus": "\e080",
+	"heart": "\e07f",
+	"broken heart": "\e07e",
+	"star": "\e081"
 );
