lucca-icons [ADD] key + history (used in directory)

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -164,5 +164,7 @@ $luccaIcons_icons: (
 	"thin plus": "\e080",
 	"heart": "\e07f",
 	"broken heart": "\e07e",
-	"star": "\e081"
+	"star": "\e081",
+	"key": "\e082",
+	"history": "\e083"
 );
