--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -166,7 +166,9 @@
 	"thin plus" "\e080",
 	"heart" "\e07f",
 	"broken heart" "\e07e",
-	"star" "\e081"
+	"star" "\e081",
+	"key" "\e082",
+	"history" "\e083"
 	;
 
 
