Lucca-icons - Add 11 new icons
- Org chart
- Flash
- Completion pie
- Snack
- Fullscreen
- Fullscreen exit
- Simple Key

- Thin east arrow
- Thin north arrow
- Thin west arrow
- Thin south arrow

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -169,6 +169,20 @@
 	"star" "\e081",
 	"key" "\e082",
 	"history" "\e083"
+
+	"org chart" "\e084",
+	"flash" "\e085",
+	"completion pie" "\e086",
+
+	"thin east arrow" "\e087",
+	"thin north arrow" "\e088",
+	"thin south arrow" "\e089",
+	"thin west arrow" "\e08b",
+
+	"snack" "\e08a",
+	"fullscreen" "\e08c",
+	"fullscreen exit" "\e08d",
+	"simple key" "\e08e"
 	;
 
 
