lucca-icons [ADD] icon flag

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -180,5 +180,6 @@ $luccaIcons_icons: (
 	"snack": "\e08a",
 	"fullscreen": "\e08c",
 	"fullscreen exit": "\e08d",
-	"simple key": "\e08e"
+	"simple key": "\e08e",
+	"flag": "\e08f"
 );
