--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -182,7 +182,8 @@
 	"snack" "\e08a",
 	"fullscreen" "\e08c",
 	"fullscreen exit" "\e08d",
-	"simple key" "\e08e"
+	"simple key" "\e08e",
+	"flag" "\e08f"
 	;
 
 
