[ADD] icons home, planning, planning-tools, todolist, credit-debit

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -183,7 +183,12 @@
 	"fullscreen" "\e08c",
 	"fullscreen exit" "\e08d",
 	"simple key" "\e08e",
-	"flag" "\e08f"
+	"flag" "\e08f",
+	"home" "\e090",
+	"planning" "\e091",
+	"planning-tool" "\e092",
+	"todolist" "\e093",
+	"credit-debit" "\e094"
 	;
 
 
