--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -181,5 +181,10 @@ $luccaIcons_icons: (
 	"fullscreen": "\e08c",
 	"fullscreen exit": "\e08d",
 	"simple key": "\e08e",
-	"flag": "\e08f"
+	"flag": "\e08f",
+	"home": "\e090",
+	"planning": "\e091",
+	"planning-tool": "\e092",
+	"todolist": "\e093",
+	"credit-debit": "\e094"
 );
