[ADD] Planning-manager icon

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -188,7 +188,8 @@
 	"planning" "\e091",
 	"planning-tool" "\e092",
 	"todolist" "\e093",
-	"credit-debit" "\e094"
+	"credit-debit" "\e094",
+	"planning-manager" "\e095"
 	;
 
 
