--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -186,5 +186,6 @@ $luccaIcons_icons: (
 	"planning": "\e091",
 	"planning-tool": "\e092",
 	"todolist": "\e093",
-	"credit-debit": "\e094"
+	"credit-debit": "\e094",
+	"planning-manager": "\e095"
 );
