--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -187,5 +187,18 @@ $luccaIcons_icons: (
 	"planning-tool": "\e092",
 	"todolist": "\e093",
 	"credit-debit": "\e094",
-	"planning-manager": "\e095"
+	"planning-manager": "\e095",
+
+	"format-bold": "\e096",
+	"format-clear": "\e097",
+	"format-italic": "\e098",
+	"format-link": "\e099",
+	"format-list": "\e09a",
+	"format-list-nb": "\e09b",
+	"format-redo": "\e096c",
+	"format-underlined": "\e096d",
+	"format-undo": "\e096e",
+	
+	"dossier-rh": "\e096f",
+	"telephone": "\e0a0"
 );
