Add certification icons

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -202,7 +202,11 @@
 	"format-undo" "\e09e",
 	
 	"dossier-rh" "\e09f",
-	"telephone" "\e0a0"
+	"telephone" "\e0a0",
+
+	"certif-error" "\e0a1",
+	"certif-valid" "\e0a2",
+	"certif-waiting" "\e0a3"
 	;
 
 
