[add] icon face e0a4

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -204,5 +204,7 @@ $luccaIcons_icons: (
 
 	"certif-error": "\e0a1",
 	"certif-valid": "\e0a2",
-	"certif-waiting": "\e0a3"
+	"certif-waiting": "\e0a3",
+
+	"face": "\e0a4"
 );
