--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -206,7 +206,9 @@
 
 	"certif-error" "\e0a1",
 	"certif-valid" "\e0a2",
-	"certif-waiting" "\e0a3"
+	"certif-waiting" "\e0a3",
+
+	"face" "\e0a4"
 	;
 
 
