--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -209,6 +209,12 @@
 	"certif-waiting" "\e0a3",
 
 	"face" "\e0a4"
+	"update" "\e0a5",
+	"book" "\e0a6",
+	"bow" "\e0a7",
+	"compas" "\e0a8",
+	"dashboard" "\e0a9",
+	"dialog" "\e0aA"
 	;
 
 
