--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -206,5 +206,12 @@ $luccaIcons_icons: (
 	"certif-valid": "\e0a2",
 	"certif-waiting": "\e0a3",
 
-	"face": "\e0a4"
+	"face": "\e0a4",
+
+	"update" : "\e0a5",
+	"book" : "\e0a6",
+	"bow" : "\e0a7",
+	"compas" : "\e0a8",
+	"dashboard" : "\e0a9",
+	"dialog" : "\e0aA",
 );
