[fix] fix broken update reference

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -208,7 +208,7 @@
 	"certif-valid" "\e0a2",
 	"certif-waiting" "\e0a3",
 
-	"face" "\e0a4"
+	"face" "\e0a4",
 	"update" "\e0a5",
 	"book" "\e0a6",
 	"bow" "\e0a7",
