[add] adds 3 icons (rotate, light-bulb, toll)

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -214,7 +214,10 @@
 	"bow" "\e0a7",
 	"compas" "\e0a8",
 	"dashboard" "\e0a9",
-	"dialog" "\e0aA"
+	"dialog" "\e0aA",
+	"light-bulb" "\e0ab",
+	"toll" "\e0ac",
+	"rotate" "\e0ad"
 	;
 
 
