--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -214,4 +214,7 @@ $luccaIcons_icons: (
 	"compas" : "\e0a8",
 	"dashboard" : "\e0a9",
 	"dialog" : "\e0aA",
+	"light-bulb": "\e0ab",
+	"toll": "\e0ac",
+	"rotate": "\e0ad",
 );
